Refactor (cont)
Trails now have an enum. LimitedTrailCommand and its tab-completer can now use 'view' to see what limited trails a player has. Added the ability to bulk grant/revoke all or specific types of limited trails.